# CleanScope

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  E2E_SETUP.md  LICENSE  PLAYWRIGHT_SETUP_SUMMARY.md  README.md  biome.json  index.html  justfile  package-lock.json  package.json  playwright.config.ts  release-please-config.json  tsconfig.json  typedoc.json  vite.config.ts
.claude/: settings.json
.claude/blueprints/: .manifest.json  work-overview.md
.claude/blueprints/adr/: 002-jpeg-decoding-strategy.md  003-resolution-negotiation-protocol.md
.claude/blueprints/work-orders/: usb-permission-fix.md
.claude/commands/adr/: create.md
.claude/commands/android/: build.md  deploy.md  logs.md  wifi.md
.claude/commands/check/: android.md  layout.md
.claude/commands/project/: cleanscope-dev.md
.claude/commands/tauri/: command.md
.claude/commands/usb/: analyze.md  controls.md  descriptors.md  probe.md  test.md
.claude/rules/: development.md  rust-backend.md  svelte-frontend.md  testing.md  video-pipeline.md
.claude/skills/android-layout-audit/: CHECKLIST.md  SKILL.md
.claude/skills/frame-streaming/: SKILL.md
.claude/skills/jni-android/: SKILL.md
.claude/skills/libusb-android/: SKILL.md
.claude/skills/tauri-android/: SKILL.md
.claude/skills/usb-camera-analysis/: REFERENCE.md  SKILL.md
.claude/skills/uvc-streaming/: SKILL.md
.github/: dependabot.yml
.github/workflows/: android-release.yml  pages.yml  release-please.yml  test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: FRAME_ASSEMBLY_ANALYSIS.md  PUBLISHING.md  REFACTORING_PLAN.md  VIDEO_PIPELINE.md  health-history.json  image-pipeline.md  privacy-policy.html
docs/adrs/: 001-frame-streaming-architecture.md
docs/blueprint/: .manifest.json  README.md  feature-tracker.json  work-overview.md
docs/blueprint/work-orders/completed/: resolution-cycling-ui.md  usb-permission-fix.md
e2e/: README.md  frame-streaming.spec.ts  helpers.ts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  frame_assembler.rs  frame_validation.rs  lib.rs  libusb_android.rs  main.rs  replay.rs  usb.rs  yuv_conversion.rs
src-tauri/src/test_utils/: mod.rs  packet_generator.rs
src-tauri/tests/: frame_pipeline_test.rs  replay_fixtures_test.rs
src-tauri/tests/fixtures/: generate_mjpeg_fixture.rs
src-tauri/tests/fixtures/mjpeg_640x480/: capture.json
src/lib/: CaptureInfo.svelte  ConnectionOverlay.svelte  DebugControls.svelte  StatusBar.svelte  types.ts
