[package]
name = "clean-scope"
version = "0.2.2"
description = "Privacy-respecting USB endoscope viewer for Android"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "clean_scope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt"] }

[target.'cfg(target_os = "android")'.dependencies]
# JNI bridge for Android
jni = "0.21"

# NDK bindings
ndk = { version = "0.9", features = ["api-level-24"] }
ndk-context = "0.1"

# Android-specific logging
android_logger = "0.14"

# Image decoding for MJPEG streams
jpeg-decoder = "0.3"

# YUV to RGB conversion for raw video formats
yuvutils-rs = "0.7"

# Low-level USB access via libusb
# Using vendored libusb to avoid system dependency issues on Android
libusb1-sys = { version = "0.7", features = ["vendored"] }

# libc for raw pointer types used in libusb FFI
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "generate_mjpeg_fixture"
path = "tests/fixtures/generate_mjpeg_fixture.rs"

[lints.clippy]
# Warn on common issues, allow pedantic for early development
all = { level = "warn", priority = -1 }

# Allow noisy lints during early development
needless-pass-by-value = "allow"
unnecessary-wraps = "allow"
must-use-candidate = "allow"

# Documentation lints (standard level)
doc-markdown = "warn"
missing-errors-doc = "warn"
missing-panics-doc = "warn"

[lints.rust]
# Allow dead code during early development
dead-code = "allow"

# Documentation requirements (standard level)
missing_docs = "warn"

[lints.rustdoc]
# Detect broken documentation links
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
